styles.css updated

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ figure {
 #image {
     height: auto;
     max-width: 100%;
-    display: block;
+    display: block;zz
     margin-right: auto;
     margin-left: auto;
 }
